# otomata-mcp

./: README.md  example_demo.py  pyproject.toml
otomata_mcp/: __init__.py  _util.py  bootstrap.py  feedback.py  identity.py  instructions.py  logging.py  scope.py
otomata_mcp/acl/: __init__.py  middleware.py  schema.py  store.py  tools.py
otomata_mcp/adapters/: __init__.py  pg.py  postgrest.py
otomata_mcp/content/: __init__.py  model.py  schema.py  store.py  tools.py  validate.py
otomata_mcp/memory/: __init__.py  model.py  schema.py  store.py  tools.py
otomata_mcp/rbac/: __init__.py  gate.py  roles.py  schema.py  store.py
otomata_mcp/run/: __init__.py  stack.py  tools.py
tests/: test_pg_adapter.py  test_postgrest_adapter.py  test_socle.py
