[project]
name = "otomata-mcp"
version = "0.1.2"
description = "Socle commun des serveurs MCP Otomata : doctrines en base servies en tools, runs start/stop, RBAC scopé, logging. Tout-en-tools, scope injecté (intra-entreprise ; le × Z reste à l'orchestrateur)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Otomata", email = "alexis@otomata.tech" }]
keywords = ["mcp", "fastmcp", "doctrine", "rbac", "multi-tenant"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: AsyncIO",
]
dependencies = ["fastmcp>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/otomata-tech/otomata-mcp"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["otomata_mcp*"]
